# flom

./: .gitignore  .gitmodules  .lgtm.yml  .readthedocs.yml  .travis.yml  CMakeLists.txt  Dockerfile  README.md  version.sh
ci/: bintray.in
ci/image-scripts/: build.sh  install_common.sh  install_specific.sh  package.sh
ci/scripts/linux/: after_success.sh  install.sh  script.sh
ci/scripts/linux-armv7hf/: after_success.sh  install.sh  script.sh
ci/scripts/linux-cross/: after_success.sh  install.sh  script.sh
ci/scripts/osx/: after_success.sh  install.sh  script.sh
ci/test-image/: Dockerfile  build.sh  package.sh
ci/test-image-cross/: Dockerfile
cmake/: bin.cmake  clang-format.cmake  clang-tidy.cmake  compile-options.cmake  cpack.cmake  lib.cmake  test.cmake
config/: CMakeLists.txt  flom.pc.in  flomConfig.cmake.in
docs/: about.rst  build.rst  conf.py  contents.rst  index.rst  install.rst  requirements.txt  usage.rst
include/: CMakeLists.txt
include/flom/: constants.hpp  effect.hpp  effector.hpp  effector_type.hpp  effector_weight.hpp  errors.hpp  flom.hpp  frame.hpp  interpolation.hpp  loose_compare.hpp  motion.hpp  motion.impl.hpp  optional.hpp  proto_util.hpp  range.hpp  range.impl.hpp
include/flom/compat/: optional.hpp
lib/: CMakeLists.txt  effect.cpp  effector.cpp  effector_type.cpp  effector_weight.cpp  errors.cpp  flom.cpp  frame.cpp  frame_range.cpp  keyframe_range.cpp  loose_compare.cpp  motion.cpp  motion_io.cpp  proto_util.cpp  range.cpp
proto/: effector_type.proto  frame.proto  location.proto  motion.proto  rotation.proto  translation.proto
src/: CMakeLists.txt
src/include/flom/: flom.hpp
src/lib/: CMakeLists.txt  flom.cpp
test/: CMakeLists.txt  effector.cpp  frame.cpp  generators.hpp  location.cpp  motion.cpp  motion_frame.cpp  motion_frame_range.cpp  motion_io.cpp  motion_keyframe.cpp  motion_keyframe_range.cpp  motion_misc.cpp  operators.hpp  printers.hpp  rotation.cpp
test-image/: Dockerfile  build.sh
test/include/: CMakeLists.txt  comparison.hpp  generators.hpp  operators.hpp  printers.hpp
test/lib/: CMakeLists.txt  comparison.cpp
