cmake_minimum_required(VERSION 2.7)

add_library(flom_lib SHARED motion.cpp motion_io.cpp frame.cpp effector.cpp proto_util.cpp)
add_dependencies(flom_lib flom_headers)
flom_set_compile_options(flom_lib)
set_target_properties(flom_lib PROPERTIES OUTPUT_NAME "flom")
set_target_properties(flom_lib PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
target_link_libraries(flom_lib INTERFACE flom_proto PRIVATE nlohmann_json::nlohmann_json)
enable_clang_format(flom_lib)
enable_clang_tidy(flom_lib)
